@@ -1,3 +1,15 @@
+2007-01-24  Ulrich Drepper  <drepper@redhat.com>
+
+	* stdio-common/_itoa.h: Define _itoa and _fitoa for 64-bit platforms.
+	* malloc/mtrace.c: Revert last change.
+	* posix/wordexp.c: Likewise.
+
+2007-01-24  Jakub Jelinek  <jakub@redhat.com>
+
+	* sysdeps/i386/bits/byteswap.h (__bswap_32): Add __nocona__, __core2__
+	and __geode__ to the list of i486+ CPUs.
+	* sysdeps/x86_64/bits/byteswap.h (__bswap_32): Likewise.
+
 2007-01-23  Ulrich Drepper  <drepper@redhat.com>
 
 	* stdio-common/_itoa.c: Include <limits.h>.
